fix: canvas overflow

--- a/src/index.css
+++ b/src/index.css
@@ -60,8 +60,8 @@ body {
   transition: background 0.3s ease, color 0.3s ease;
   background: var(--light-bg);
   color: var(--secondary-color);
-  /*color: rgba(95, 61, 232, 0.53);*/
-  /*background: radial-gradient(circle, #0a0a0a 60%, #101e18 100%);*/
+  overflow-x: hidden;
+  width: 100%;
 }
 
 body.scrolled {
